@@ -5,6 +5,7 @@ Dependencies:
   None
 
 New releases:
+ 2018/07/02 Version 4.2.3
  2018/06/25 Version 4.2.2
  2018/06/06 Version 4.2.1
  2018/06/04 Version 4.2.0
