@@ -1,3 +1,4 @@
+*) 2018/07/02 - release of libxc-4.2.3
 *) 2018/06/25 - release of libxc-4.2.2
 *) 2018/06/06 - release of libxc-4.2.1
 *) 2018/06/04 - release of libxc-4.2.0
